force-app/main/default/objects/geopointe__GP_Resource_View_Group_Member__c/geopointe__GP_Resource_View_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Geopointe Resource View Group Member</label>
    <nameField>
        <label>Geopointe Resource View Group Member Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Resource View Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>