force-app/main/default/objects/geopointe__GP_Resource_View_Group_Member__c/fields/geopointe__Geopointe_Resource_View_Group__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geopointe_Resource_View_Group__c</fullName>
    <label>Geopointe Resource View Group</label>
    <referenceTo>geopointe__GP_Resource_View_Group__c</referenceTo>
    <relationshipLabel>Resource View Group Members</relationshipLabel>
    <relationshipName>Geopointe_Resource_View_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>