force-app/main/default/objects/geopointe__GP_Resource_View_Group_Member__c/fields/geopointe__Role__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Role__c</fullName>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>